# lognog

./: .auto-claude-status  .env.example  .gitignore  .watchdog-state.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PHASE4-SUMMARY.md  PROJECTS_PHASE1_IMPLEMENTATION.md  README.md  docker-compose.yml  fix-docker.bat  fix-docker.ps1  install-watchdog.ps1  package-lock.json  setup-demo-data.js  test-log-parsers.bat  test-log-parsers.sh  test-watchdog-send.ps1  watchdog-config.json  watchdog.ps1
agent/: BUILD.md  LogNogIn.spec  README.md  WINDOWS-EVENTS-IMPLEMENTATION.md  build.py  build_exe.bat  config.example.yaml  install.bat  installer.iss  pyproject.toml  run_agent.py  uninstall.bat  verify_windows_events.py  version_info.txt
agent/docs/: WINDOWS-EVENTS.md
agent/src/lognog_in/: __init__.py  agent.py  alert_panel.py  alert_poller.py  buffer.py  config.py  fim.py  gui.py  main.py  shipper.py  sound_alerts.py  tray.py  voice_alerts.py  watcher.py  wizard.py
agent/src/lognog_in/collectors/: __init__.py  windows_events.py
agent/tests/: __init__.py  test_buffer.py  test_config.py  test_fim.py  test_shipper.py  test_sound_alerts.py  test_watcher.py  test_windows_events.py
api/: Dockerfile  FIELD_EXTRACTION.md  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
docs/: AI-FEATURES-ROADMAP.md  AI-ONBOARDING-WIZARD.md  ALERT-ACTIONS.md  ALERT-VARIABLES-QUICK-REFERENCE.md  ALERT-VARIABLES.md  ANIMATIONS-IMPLEMENTATION.md  APP-ONBOARDING.md  CLOUDFLARE-TUNNEL-SETUP.md  CODEBASE-INTERVIEW-WIZARD.md  DASHBOARD-IMPROVEMENTS.md  DASHBOARD-ONBOARDING.md  DASHBOARDS.md  DATABASE-TEMPLATES.md  DEPLOYMENT-GUIDE.md  DIRECTORS-PALETTE-INTEGRATION.md  DSL_REFERENCE.md  FEATURE-GAP-ANALYSIS.md  FIELD_EXTRACTION.md  GEOIP-IMPLEMENTATION.md  HYH-ADMIN-SETUP-GUIDE.md  HYH-PRE-LAUNCH-CHECKLIST.md  HYH-TEST-LOGS.md  IMAGE-SPECS.md  IMPLEMENTATION-ROADMAP.md  INTERNAL-LOGGING.md  IP-CLASSIFICATION.md  MARKETING.md  (+27 more)
(+399 files in other folders)
